--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26"
   },
-  "homepage": "https://eee0930.github.io/crypto-tracker/"
+  "homepage": "https://eee0930.github.io/crypto_tracker/"
 }
